unpackaged/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <label>Location</label>
    <nameField>
        <displayFormat>L-{000}</displayFormat>
        <label>Location Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>