unpackaged/main/default/objects/Location__c/fields/Location_Contact__c.field-meta.xml
<CustomField>
        <fullName>Location_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </CustomField>