unpackaged/main/default/objects/Location__c/fields/Name__c.field-meta.xml
<CustomField>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>