unpackaged/main/default/objects/Location__c/recordTypes/Internal.recordType-meta.xml
<RecordType>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </RecordType>